# sql_test_for_dbt

./: .gitignore  README.md  pyproject.toml  some.db
duck_test/: dbt_project.yml  dev.duckdb
duck_test/models/: distro_using.sql  schema.yml
duck_test/tests/: test_models.py
duck_test/tests/data/: linux_distro.csv
