[tool.poetry]
name = "sql-test-for-dbt"
version = "0.1.0"
description = ""
authors = ["Koji Matsumoto <otomustam.ijok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.13.0"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
